Update README to explain bootstrap class transforms